horizontal scroll bar appearence fixed

--- a/blocks/element/__footer/element__footer.css
+++ b/blocks/element/__footer/element__footer.css
@@ -1,5 +1,6 @@
 .element__footer {
   min-width: 246px;
+  height: auto;
   margin-top: 25px;
   margin-bottom: 25px;
   margin-right: 15px;
