--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,7 +3,7 @@
   min-height: 362px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background-color: #fff;
   border-radius: 10px;
