--- a/blocks/header/__line/header__line.css
+++ b/blocks/header/__line/header__line.css
@@ -1,8 +1,9 @@
 .header__line {
-    margin-top: 41px;
-    margin-bottom: 0px;
-    width: 100%;
-    opacity: 0.7;
-    border: 1px solid #545454;
-
+  margin-top: 41px;
+  margin-bottom: 0px;
+  width: 100%;
+  opacity: 0.7;
+  border-bottom: 1px solid #545454;
+  border-right: 0;
+  border-left: 0;
 }
