--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  margin: auto;
+  margin: 0;
   background: #000;
   font-family: 'Inter', Arial, sans-serif;
   color: #fff;
